--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+html {
+  scroll-behavior: smooth;
+}
+
 body {
     font-family: sans-serif;
     position : relative;
@@ -46,7 +50,9 @@ body {
     flex-wrap: wrap;
     justify-content: flex-end;;
     align-items: center;
+    transition : 1s;
   }
+
   
   nav a {
     text-decoration: none;
@@ -529,6 +535,188 @@ body {
   .gallery-container:hover img {
     transform: scale(1.2); 
   }
+
+  .Chefs{
+    text-align: center;
+    margin-top: 100px;
+    position : relative;
+    background-image: url("assets/images/chefs-bg.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
+    width:95vw;
+    height : 95vh;
+    isolation: isolate;
+    padding : 3%;
+  }
+
+  .Chefs::before{
+    content:"";
+    position : absolute;
+    z-index : -1;
+    inset : 0;
+    background-color: white;
+    opacity : 0.6;
+  }
+
+  .Chefs h2{
+    color : black;
+    text-align: center;
+    margin-top : 10px;
+  }
+
+  .Chefs h2 span{
+    color : orange;
+  }
+
+  .Chefs-items{
+    display : flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    gap : 10px;
+  }
+
+  .chefs-container{
+    margin-top: 10px;
+    width : 30%;
+    height: 50%;
+  }
+
+  .chefs-container img{
+    width : 100%;
+    height : 60%;
+  }
+
+  
+
+  .chefs-container .social{
+    display : flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap : 10px;
+  }
+
+  .chefs-container .social img{
+    width : 20px;
+    height : 20px;
+  }
+
+  .chefs-items {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px;
+    justify-content: space-between;
+  }
+  
+  .chefs-container {
+    width: 30%;
+    position: relative;
+    /* overflow: hidden; */
+  }
+  
+  .chefs-info {
+    padding : 5px;
+    position: absolute;
+    left : 3.75%;
+    bottom: -7.5%;
+    background-color:white;
+    width: 90%;
+    height : 20%;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.2);
+  }
+  
+  .chefs-info h4,
+  .chefs-info hr,
+  .chefs-info p {
+    margin: 5px 0;
+  }
+
+  .chefs-container .chefs-info>hr {
+    flex : 1;
+    width: 15%;
+    background-color : orange !important;
+    height: 2px;
+  }
+
+  
+  .chefs-info .social {
+    display: flex;
+    justify-content: center;
+    gap: 5px;
+  }
+
+  .testimonials{
+    text-align: center;
+    margin-top: 100px;
+    position : relative;
+    background-image: url("assets/images/testimonials-bg.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
+    width:95vw;
+    height : 95vh;
+    isolation: isolate;
+    padding : 3%;
+  }
+
+  .testimonials::before{
+    content:"";
+    position : absolute;
+    z-index : -1;
+    inset : 0;
+    background-color: black;
+    opacity : 0.7;
+  }
+
+  .testimonials-items{
+    height : 100%;
+    display : flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    justify-content: ;
+    align-items: center;
+    
+  }
+
+  .testimonials-items>img{
+    margin-top: 15px;
+    width : 100px;
+    height : 100px;
+    border-radius : 50%;
+    border : 5px solid rgba(255, 255, 255, 0.2)
+  }
+
+  .testimonials-items>h2{
+    color : white;
+  }
+
+  .testimonials-items>p{
+    margin-top: -15px;
+    color : white;
+  }
+
+  #stars{
+    margin-top: -1px;
+    border : none;
+    border-radius : 0;
+    width : 100px;
+    height : 20px;
+  }
+
+  .testimonials-text{
+    color : white;
+    opacity : 0.8;
+  }
+
+
+
+
+
   
 
 
