--- a/style.css
+++ b/style.css
@@ -126,6 +126,17 @@ body {
     cursor: pointer;
   }
 
+  .hero button:hover{
+    background-color: orange;
+    color: white;
+    padding: 10px 20px;
+    border-radius: 20px;
+    text-decoration: none;
+    border: 2px solid orange;
+    transition: ease-in-out 0.2s;
+    cursor: pointer;
+  }
+
   .top {
     position: absolute;
     top: 0;
